edit svg file to fix alignment and scaling of logo

--- a/src/homepage.scss
+++ b/src/homepage.scss
@@ -75,7 +75,7 @@
   width: 55vw;
   max-width: 700px;
   padding-right: 10vw;
-  margin-top: 20vh;
+  // margin-top: 20vh;
   justify-self: left;
   text-align: left;
   padding-bottom: 10vh;
@@ -371,11 +371,12 @@
 }
 
 #HeaderLogoButton {
-  height: 100px;
-  max-height: 10vh;
-  padding-left: 10vw;
+  // height: 100px;
+  // max-height: 100%;
+  // padding-left: 10vw;
+  // margin-bottom: 175px;
   padding-top: 4vh;
-  object-fit: fill;
+  // object-fit: fill;
 }
 
 // Layout
